[package]
name = "math_visualiser"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "WebGlRenderingContext"] }
nalgebra = "0.29" # For handling complex numbers and linear algebra

[lib]
crate-type = ["cdylib", "rlib"]